--- a/src/Styles/admin.css
+++ b/src/Styles/admin.css
@@ -459,20 +459,26 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 1;
+  margin-top: 10rem;
+
 }
 
 .adminmodal-content {
-  background-color: #fff;
-  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  font-family: 'Anton', sans-serif;
+  font-family: 'Open Sans', sans-serif;
+  justify-content: center;
+  /* From https://css.glass */
+background: rgba(6, 4, 4, 0.716);
+border-radius: 16px;
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(20px);
+-webkit-backdrop-filter: blur(20px);
+border: 1px solid rgba(255, 255, 255, 0.96);
+
   padding: 20px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  
   max-width: 500px;
   width: 80%;
   position: relative;
@@ -514,6 +520,14 @@ label {
   margin: 0 auto;
   overflow: hidden;
   width: 200px;
+}
+.input-adminform{
+  padding: 5px;
+  border-radius: 10px;
+  background-color: #ffffff;
+}
+label{
+  padding-top: 10px;
 }
 
 /* Searchbar */
