--- a/src/Styles/admin.css
+++ b/src/Styles/admin.css
@@ -414,8 +414,7 @@
   gap: 10px;
 }
 
-.event-form-modal button[type='submit'],
-.event-form-modal button[type='button'] {
+.event-form-modal button[type='submit'] {
   display: inline-block;
   padding: 10px 20px;
   border: none;
@@ -425,10 +424,22 @@
   cursor: pointer;
   transition: all 0.3s ease-in-out;
 }
+.event-form-modal button[type='button']{
+  display: inline-block;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  background-color: #ff0505;
+  color: #fff;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
 
-.event-form-modal button[type='submit']:hover,
-.event-form-modal button[type='button']:hover {
+.event-form-modal button[type='submit']:hover{
   background-color: #005ea8;
+}
+.event-form-modal button[type='button']:hover{
+  background-color: #ae0909;
 }
 
 .event-form-modal select {
@@ -460,7 +471,7 @@
   justify-content: center;
   align-items: center;
   margin-top: 10rem;
-
+  
 }
 
 .adminmodal-content {
